--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -31,6 +31,7 @@
   </parent>
 
   <artifactId>lib</artifactId>
+  <version>${parent.version}</version>
   <packaging>pom</packaging>
   <name>Libraries Aggregator</name>
 
