--- a/lib/patch-place-break/pom.xml
+++ b/lib/patch-place-break/pom.xml
@@ -31,7 +31,7 @@
   </parent>
 
   <artifactId>patch-place-break</artifactId>
-  <version>${parent.version}</version>
+  <version>1.3.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>PatchPlaceBreak Aggregator</name>
   <description>Aggregator of place-and-break patch modules</description>
