--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -31,7 +31,7 @@
   </parent>
 
   <artifactId>lib</artifactId>
-  <version>${parent.version}</version>
+  <version>1.3.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Libraries Aggregator</name>
 
