--- a/lib/tag-persistence/pom.xml
+++ b/lib/tag-persistence/pom.xml
@@ -31,7 +31,7 @@
   </parent>
 
   <artifactId>tag-persistence</artifactId>
-  <version>${parent.version}</version>
+  <version>1.3.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Tag Persistence Aggregator</name>
   <description>Aggregator of the place-and-break patch tags persistence modules</description>
