chore(renovate): ignore dependencies which can't be updated because of Java 8

--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,7 @@
     "com.github.ekryd.sortpom:sortpom-maven-plugin",
     "net.revelc.code:impsort-maven-plugin",
     "net.revelc.code.formatter:formatter-maven-plugin",
-    "com.zaxxer:HikariCP"
+    "com.zaxxer:HikariCP",
+    "cimg/openjdk"
   ]
 }
