--- a/lib/patch-place-break/patch-place-break-core/patch-place-break-api/pom.xml
+++ b/lib/patch-place-break/patch-place-break-core/patch-place-break-api/pom.xml
@@ -26,22 +26,16 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
-    <artifactId>lib</artifactId>
+    <artifactId>patch-place-break-core</artifactId>
     <version>1.3.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>tag-persistence</artifactId>
-  <packaging>pom</packaging>
-  <name>Tag Persistence Aggregator</name>
-  <description>Aggregator of the place-and-break patch tags persistence modules</description>
-
-  <modules>
-    <module>tag-persistence-api</module>
-    <module>tag-persistence-inmemory</module>
-    <module>tag-persistence-sqlite</module>
-  </modules>
+  <artifactId>patch-place-break-api</artifactId>
+  <packaging>jar</packaging>
+  <name>PatchPlaceBreak API</name>
+  <description>API of the place-break patch</description>
 
   <properties>
-    <main.basedir>${project.basedir}/../..</main.basedir>
+    <main.basedir>${project.basedir}/../../../..</main.basedir>
   </properties>
 </project>
