--- a/patch-place-break/patch-place-break-persistence/persistence-inmemory/pom.xml
+++ b/patch-place-break/patch-place-break-persistence/persistence-inmemory/pom.xml
@@ -33,8 +33,8 @@
 
   <artifactId>persistence-inmemory</artifactId>
   <packaging>jar</packaging>
-  <name>Tag Persistence InMemory Implementation</name>
-  <description>InMemory implementation of tag persistence (for tests purpose)</description>
+  <name>Persistence InMemory Implementation</name>
+  <description>InMemory implementation of persistence (for tests purpose)</description>
 
   <properties>
     <main.basedir>${project.basedir}/../../../</main.basedir>
