--- a/patch-place-break/patch-place-break-persistence/pom.xml
+++ b/patch-place-break/patch-place-break-persistence/pom.xml
@@ -33,8 +33,8 @@
 
   <artifactId>patch-place-break-persistence</artifactId>
   <packaging>pom</packaging>
-  <name>Tag Persistence Aggregator</name>
-  <description>Aggregator of the place-and-break patch tags persistence modules</description>
+  <name>Persistence Aggregator</name>
+  <description>Aggregator of the place-and-break patch persistence modules</description>
 
   <modules>
     <module>persistence-api</module>
