--- a/patch-place-break/patch-place-break-storage/storage-sqlite/pom.xml
+++ b/patch-place-break/patch-place-break-storage/storage-sqlite/pom.xml
@@ -28,16 +28,16 @@
     <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
     <artifactId>mc-jobs-reborn-patch-place-break</artifactId>
     <version>1.4.0-SNAPSHOT</version>
-    <relativePath>../../pom.xml</relativePath>
+    <relativePath>../../../pom.xml</relativePath>
   </parent>
 
-  <artifactId>patch-place-break-core</artifactId>
+  <artifactId>storage-sqlite</artifactId>
   <packaging>jar</packaging>
-  <name>PatchPlaceBreak Implementation</name>
-  <description>The default implementation of the place-break patch API</description>
+  <name>Persistence SQLite Implementation</name>
+  <description>SQLite implementation of persistence</description>
 
   <properties>
-    <main.basedir>${project.basedir}/../../</main.basedir>
+    <main.basedir>${project.basedir}/../../../</main.basedir>
   </properties>
 
   <dependencies>
@@ -46,8 +46,22 @@
       <artifactId>guice</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+    </dependency>
+    <dependency>
       <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
       <artifactId>patch-place-break-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
+      <artifactId>patch-place-break-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
+      <artifactId>storage-api</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
@@ -55,9 +69,8 @@
       <artifactId>javax.inject</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.google.errorprone</groupId>
-      <artifactId>error_prone_annotations</artifactId>
-      <scope>provided</scope>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
