--- a/patch-place-break/patch-place-break-storage/storage-api/pom.xml
+++ b/patch-place-break/patch-place-break-storage/storage-api/pom.xml
@@ -33,8 +33,8 @@
 
   <artifactId>storage-api</artifactId>
   <packaging>jar</packaging>
-  <name>Persistence API</name>
-  <description>API to persist data of the place-and-break patch</description>
+  <name>Storage API</name>
+  <description>API to store data of the place-and-break patch</description>
 
   <properties>
     <main.basedir>${project.basedir}/../../../</main.basedir>
