--- a/patch-place-break/patch-place-break-storage/storage-inmemory/pom.xml
+++ b/patch-place-break/patch-place-break-storage/storage-inmemory/pom.xml
@@ -33,8 +33,8 @@
 
   <artifactId>storage-inmemory</artifactId>
   <packaging>jar</packaging>
-  <name>Persistence InMemory Implementation</name>
-  <description>InMemory implementation of persistence (for tests purpose)</description>
+  <name>Storage InMemory</name>
+  <description>InMemory implementation of storage (for tests purpose)</description>
 
   <properties>
     <main.basedir>${project.basedir}/../../../</main.basedir>
