--- a/patch-place-break/patch-place-break-storage/storage-sqlite/pom.xml
+++ b/patch-place-break/patch-place-break-storage/storage-sqlite/pom.xml
@@ -33,8 +33,8 @@
 
   <artifactId>storage-sqlite</artifactId>
   <packaging>jar</packaging>
-  <name>Persistence SQLite Implementation</name>
-  <description>SQLite implementation of persistence</description>
+  <name>Storage SQLite</name>
+  <description>SQLite implementation of storage</description>
 
   <properties>
     <main.basedir>${project.basedir}/../../../</main.basedir>
