--- a/bukkit/bukkit-slf4j/pom.xml
+++ b/bukkit/bukkit-slf4j/pom.xml
@@ -28,20 +28,22 @@
     <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
     <artifactId>mc-jobs-reborn-patch-place-break</artifactId>
     <version>1.4.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
 
-  <artifactId>bukkit</artifactId>
-  <packaging>pom</packaging>
-  <name>Bukkit Implementation</name>
-  <description>The Bukkit implementation of the place-and-break patch</description>
-
-  <modules>
-    <module>bukkit-adapter</module>
-    <module>bukkit-plugin</module>
-    <module>bukkit-slf4j</module>
-  </modules>
+  <artifactId>bukkit-slf4j</artifactId>
+  <packaging>jar</packaging>
+  <name>Bukkit SLF4J</name>
+  <description>The SLF4J implementation for Bukkit</description>
 
   <properties>
-    <main.basedir>${project.basedir}/../</main.basedir>
+    <main.basedir>${project.basedir}/../../</main.basedir>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+  </dependencies>
 </project>
