--- a/patch-place-break/pom.xml
+++ b/patch-place-break/pom.xml
@@ -32,8 +32,8 @@
 
   <artifactId>patch-place-break</artifactId>
   <packaging>pom</packaging>
-  <name>PatchPlaceBreak Aggregator</name>
-  <description>Aggregator of place-and-break patch modules</description>
+  <name>PatchPlaceBreak</name>
+  <description>The place-and-break patch modules</description>
 
   <modules>
     <module>patch-place-break-api</module>
