--- a/patch-place-break/patch-place-break-storage/pom.xml
+++ b/patch-place-break/patch-place-break-storage/pom.xml
@@ -33,8 +33,8 @@
 
   <artifactId>patch-place-break-storage</artifactId>
   <packaging>pom</packaging>
-  <name>Storage Aggregator</name>
-  <description>Aggregator of the place-and-break patch storage modules</description>
+  <name>Storage</name>
+  <description>The place-and-break patch storage modules</description>
 
   <modules>
     <module>storage-api</module>
