--- a/patch-place-break/patch-place-break-storage/pom.xml
+++ b/patch-place-break/patch-place-break-storage/pom.xml
@@ -39,6 +39,8 @@
   <modules>
     <module>storage-api</module>
     <module>storage-inmemory</module>
+    <module>storage-mysql</module>
+    <module>storage-sql-commons</module>
     <module>storage-sqlite</module>
   </modules>
 
