--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -42,6 +42,79 @@
   </modules>
 
   <properties>
+    <!-- ==================== General ==================== -->
     <main.basedir>${project.basedir}/../</main.basedir>
+
+    <!-- ==================== Dependencies versions ==================== -->
+    <spigotApi.version>1.11.2-R0.1-SNAPSHOT</spigotApi.version>
+    <jobsReborn.version>v4.17.2</jobsReborn.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <!-- The JobsReborn plugin must be installed on the Bukkit server -->
+      <dependency>
+        <groupId>com.github.Zrips</groupId>
+        <artifactId>Jobs</artifactId>
+        <version>${jobsReborn.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <!-- Same logic followed here than for the SQLite client dependency -->
+      <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>${mysql.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <!-- The server must provide at least the Spigot API (not only Bukkit) -->
+      <dependency>
+        <groupId>org.spigotmc</groupId>
+        <artifactId>spigot-api</artifactId>
+        <version>${spigotApi.version}</version>
+        <scope>provided</scope>
+        <!-- Exclude all unused dependencies -->
+        <exclusions>
+          <exclusion>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-chat</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.avaje</groupId>
+            <artifactId>ebean</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <!--
+        The SQLite JDBC is provided by the CraftBukkit server implementation
+        Ideally we should not depend on implementation details, but permits here to save
+        ~10 Mo of size which at final permit to upload the plugin into the Spigot website.
+      -->
+      <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>${sqlite.version}</version>
+        <scope>provided</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
