--- a/patch-place-break/patch-place-break-storage/storage-sqlite/pom.xml
+++ b/patch-place-break/patch-place-break-storage/storage-sqlite/pom.xml
@@ -65,6 +65,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
+      <artifactId>storage-sql-commons</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
     </dependency>
