--- a/pom.xml
+++ b/pom.xml
@@ -101,11 +101,10 @@
     <commonsLang3.version>3.12.0</commonsLang3.version>
     <!-- Latest version of HikariCP compatible with Java 8: don't bump it! -->
     <hikaricp.version>4.0.3</hikaricp.version>
-    <slf4j.version>2.0.6</slf4j.version>
     <sqlite.version>3.40.0.0</sqlite.version>
-    <jobs.version>v4.17.2</jobs.version>
+    <mysql.version>8.0.31</mysql.version>
+    <slf4j.version>2.0.6</slf4j.version>
     <lombok.version>1.18.24</lombok.version>
-    <spigotApi.version>1.11.2-R0.1-SNAPSHOT</spigotApi.version>
     <bstat.version>3.0.0</bstat.version>
     <junitJupiter.version>5.9.1</junitJupiter.version>
     <mockito.version>4.10.0</mockito.version>
@@ -136,6 +135,11 @@
         <version>${javaxInject.version}</version>
       </dependency>
       <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>${mysql.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>${commonsLang3.version}</version>
@@ -155,13 +159,6 @@
         <artifactId>sqlite-jdbc</artifactId>
         <version>${sqlite.version}</version>
       </dependency>
-      <!-- The JobsReborn plugin must be installed on the Bukkit server -->
-      <dependency>
-        <groupId>com.github.Zrips</groupId>
-        <artifactId>Jobs</artifactId>
-        <version>${jobs.version}</version>
-        <scope>provided</scope>
-      </dependency>
       <dependency>
         <groupId>com.google.errorprone</groupId>
         <artifactId>error_prone_annotations</artifactId>
@@ -173,43 +170,6 @@
         <artifactId>lombok</artifactId>
         <version>${lombok.version}</version>
         <scope>provided</scope>
-      </dependency>
-      <!-- The server must provide at least the Spigot API (not only Bukkit) -->
-      <dependency>
-        <groupId>org.spigotmc</groupId>
-        <artifactId>spigot-api</artifactId>
-        <version>${spigotApi.version}</version>
-        <scope>provided</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-chat</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.avaje</groupId>
-            <artifactId>ebean</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
       <dependency>
         <groupId>com.jparams</groupId>
