--- a/patch-place-break/patch-place-break-storage/storage-api/pom.xml
+++ b/patch-place-break/patch-place-break-storage/storage-api/pom.xml
@@ -42,6 +42,10 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
       <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
       <artifactId>patch-place-break-api</artifactId>
       <version>${project.version}</version>
