--- a/patch-place-break/pom.xml
+++ b/patch-place-break/pom.xml
@@ -38,6 +38,7 @@
   <modules>
     <module>patch-place-break-api</module>
     <module>patch-place-break-core</module>
+    <module>patch-place-break-internal</module>
     <module>patch-place-break-storage</module>
   </modules>
 
