refactor: rename module

--- a/patch-place-break/patch-place-break-storage/storage-base-sql/pom.xml
+++ b/patch-place-break/patch-place-break-storage/storage-base-sql/pom.xml
@@ -31,7 +31,7 @@
     <relativePath>../../../pom.xml</relativePath>
   </parent>
 
-  <artifactId>storage-sql</artifactId>
+  <artifactId>storage-base-sql</artifactId>
   <packaging>jar</packaging>
   <name>Storage SQL</name>
   <description>SQL commons to store data of the place-and-break patch</description>
