--- a/patch-place-break/patch-place-break-storage/pom.xml
+++ b/patch-place-break/patch-place-break-storage/pom.xml
@@ -38,9 +38,9 @@
 
   <modules>
     <module>storage-api</module>
+    <module>storage-base-sql</module>
     <module>storage-inmemory</module>
     <module>storage-mysql</module>
-    <module>storage-sql</module>
     <module>storage-sqlite</module>
   </modules>
 
